Expose REST API

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,11 +4,13 @@ project(zoro-db LANGUAGES CXX)
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
+set(CMAKE_POSITION_INDEPENDENT_CODE ON)
+
 include_directories(${CMAKE_CURRENT_SOURCE_DIR})
 
 add_subdirectory(storage)
 add_subdirectory(collection)
-add_subdirectory(api/cli) 
+add_subdirectory(api) 
 
 add_executable(zoro-db
     main.cpp
@@ -17,5 +19,6 @@ add_executable(zoro-db
 target_link_libraries(zoro-db PRIVATE
     storage
     collection
-    cli         
+    zoro_core
+    zoro_cli
 )
