--- a/src/collection/CMakeLists.txt
+++ b/src/collection/CMakeLists.txt
@@ -7,6 +7,8 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 file(GLOB COLLECTION_HEADERS include/*.h)
 file(GLOB COLLECTION_SOURCES src/*.cpp)
 
+set(CMAKE_POSITION_INDEPENDENT_CODE ON)
+
 add_library(collection STATIC
     ${COLLECTION_SOURCES}
     ${COLLECTION_HEADERS}
