--- a/src/storage/CMakeLists.txt
+++ b/src/storage/CMakeLists.txt
@@ -7,6 +7,8 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 file(GLOB STORAGE_HEADERS include/*.h)
 file(GLOB STORAGE_SOURCES src/*.cpp)
 
+set(CMAKE_POSITION_INDEPENDENT_CODE ON)
+
 add_library(storage STATIC
     ${STORAGE_SOURCES}
     ${STORAGE_HEADERS}
