--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -9,6 +9,7 @@ set(CMAKE_POSITION_INDEPENDENT_CODE ON)
 include_directories(${CMAKE_CURRENT_SOURCE_DIR})
 
 add_subdirectory(storage)
+add_subdirectory(wal)
 add_subdirectory(collection)
 add_subdirectory(api) 
 
@@ -18,6 +19,7 @@ add_executable(zoro-db
 
 target_link_libraries(zoro-db PRIVATE
     storage
+    wal
     collection
     zoro_core
     zoro_cli
