--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -12,6 +12,7 @@ add_subdirectory(storage)
 add_subdirectory(wal)
 add_subdirectory(collection)
 add_subdirectory(api) 
+add_subdirectory(services) 
 
 add_executable(zoro-db
     main.cpp
@@ -21,6 +22,6 @@ target_link_libraries(zoro-db PRIVATE
     storage
     wal
     collection
-    zoro_core
     zoro_cli
+    zoro_services
 )
